# Gagiteck-AI-Saas-Agentic

./: .gitignore  PR_DESCRIPTION.md  README.md  amplify.yml  docker-compose.yml  install.cmd  install.sh  robots.txt  test-permissions.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  deploy.yml.disabled  publish-pypi.yml  python-sdk.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/db/: __init__.py  database.py  models.py  repositories.py
api/middleware/: __init__.py  security.py
api/routes/: __init__.py  agents.py  auth.py  executions.py  health.py  rbac.py  search.py  webhooks.py  workflows.py
api/services/: __init__.py  audit.py  cache.py  email.py
api/tests/: conftest.py  test_agents.py  test_auth.py  test_executions.py  test_health.py  test_workflows.py
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
dashboard/public/: robots.txt
dashboard/src/: middleware.ts
docs/: API.md  DEVELOPER.md  README.md  USER_GUIDE.md  api-reference.md  configuration.md  deployment-cloud.md  deployment-docker.md  deployment-kubernetes.md  faq.md  installation.md  sdk-nodejs.md  sdk-python.md  troubleshooting.md
infrastructure/: ecs-env-setup.sh
infrastructure/terraform/: README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
sdk/python/: CHANGELOG.md  LICENSE  (+2 more)
(+42 files in other folders)
